[+] Added desktop and started refactoring